--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -910,7 +910,7 @@
 		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert, \(f\colon U\to\mathbb{R}\) una funció \(n\)-vegades diferenciable en un punt \(a\in U\) i \(b\in U\) un altre punt. Aleshores existeix un punt \(z\in U\) tal que, per a algun \(0<\xi<1\), \(z=a+(b-\xi a)\) (això és que el punt \(z\) es troba en el segment que uneix els punts \(a\) i \(b\)) tal que
 		\[f(b)-f(a)=\sum_{k=1}^{n-1}\frac{1}{k!}f^{(k)}[a,b-a]+\frac{1}{n}f^{(n)}[z,b-a].\]
 		\begin{proof}
-			Com que, per hipòtesi, \(U\) és obert, per la definició de \myref{def:obert} sabem que existeix un \(\varepsilon>0\) tal que, per a tot \(-\varepsilon<t<1+\varepsilon\), tenim que \(a+t(b-a)\in S\). Per tant, definim una funció \(g\) com
+			Com que, per hipòtesi, \(U\) és obert, per la definició de \myref{def:obert CDVO} sabem que existeix un \(\varepsilon>0\) tal que, per a tot \(-\varepsilon<t<1+\varepsilon\), tenim que \(a+t(b-a)\in S\). Per tant, definim una funció \(g\) com
 			\begin{align*}
 			g\colon(-\varepsilon,1+\varepsilon)&\to\mathbb{R}\\
 			t&\mapsto f(a+t(b-a))
