--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -106,8 +106,8 @@
 	\end{theorem}
 	\section{Trobar lloc per tot això}
 	\begin{definition}[Conjunt obert, tancat...]
-		\labelname{conjunt obert}\label{def:obert}
-		\labelname{conjunt tancat}\label{def:tancat}\label{conjunt obert, tancat...}\label{todo:conjunt definit per desigualtats estrictes és compacte}
+		\labelname{conjunt obert}\label{def:obert CDVO}
+		\labelname{conjunt tancat}\label{def:tancat CDVO}\label{conjunt obert, tancat...}\label{todo:conjunt definit per desigualtats estrictes és compacte}
 	\end{definition}
 	\begin{definition}[Continuïtat uniforme]
 		\labelname{continuïtat uniforme}\label{def:uniformement contínua}
