He afegit teoria a Topologia, fins arribar a la definició de topologia

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -184,7 +184,6 @@
 	\endgroup
 }
 \makeatother
-
 \makeatletter
 \newcommand{\labelname}[1]{
 	\def\@currentlabelname{#1}}
@@ -203,7 +202,7 @@
 		\subfile{parts/FNM.tex}
 	\part{Àlgebra Lineal}
 		\subfile{parts/AlgebraLineal.tex}
-	\part{Coses per fer a l'estiu}
+	\part{Coses per fer}
 		\subfile{parts/Intro.tex}
 	\part{Càlcul en diverses variables i optimització}
 		\subfile{parts/CDVO.tex}
