--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1,12 +1,10 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\chapter{Sèries numèriques}
-	\section{Convergència d'una sèrie numèrica}
-	\subsection{Sèrie numèrica}
-	\begin{definition}[Sèrie numèrica]
-		
-	\end{definition}
-
-
+%\chapter{Sèries numèriques}
+%	\section{Convergència d'una sèrie numèrica}
+%	\subsection{Sèrie numèrica}
+%	\begin{definition}[Sèrie numèrica]
+%		
+%	\end{definition}
 \end{document}
