--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -42,7 +42,7 @@
 	\section{Funcions de variable real}
 	\subsection{Definicions}
 	\begin{definition}[Funció contínua]
-		\labelname{funció contínua}\label{def:funcio continua}
+		\labelname{funció contínua}\label{def:funcio continua}\label{def:funció contínua}
 		Sigui \(f\) una funció. Direm que \(f\) és contínua en \(a\) si
 		\[\lim_{x\to a}f(x)=f(a).\]
 	\end{definition}
