Correcció d'error al .tex

--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -75,11 +75,11 @@
 		\labelname{topologia}\label{def:topologia}
 		\labelname{oberts topologia}\label{def:oberts topologia}
 		Sigui \(X\) un conjunt i \(\tau\) una família de subconjunts de \(X\) tals que
-		\begin{itemize}
+		\begin{enumerate}
 		\item \(\emptyset\) i \(X\) són elements de \(\tau\).
 		\item La intersecció d'una família finita d'elements de \(\tau\) és un element de \(\tau\).
 		\item La unió d'una família d'elements de \(\tau\) és un element de \(\tau\).
-		\end{itemize}
+		\end{enumerate}
 		Aleshores direm que \(\tau\) és una topologia de \(X\). També direm que els elements de \(\tau\) són oberts.
 	\end{definition}
 %	\subsection{L'espai topològic}
