--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -1,5 +1,20 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-%\chapter{Tema 1}
+\chapter{Equacions diferencials de primer ordre en una variable}
+	\section{Teoremes d'existència i unicitat}
+	\subsection{Equacions diferencials ordinàries}
+	\begin{definition}[Equació diferencial ordinària d'ordre \(n\)]
+		\labelname{equació diferencial ordinària d'odre $n$}\label{def:equació diferencial ordinària d'ordre n}
+		\labelname{solució de l'equació diferencial ordinària}\label{def:solució de l'equació diferencial ordinària}
+		Siguin \(\Omega=\mathbb{R}\times\mathbb{R}^{n}\) un conjunt i \(F\colon\Omega\longrightarrow\mathbb{R}^{m}\), \(u\colon\mathbb{R}\longrightarrow\mathbb{R}^{m}\) dues funcions tals que
+		\[\frac{\partial^{n}u(x)}{\partial x^{n}}=F\left(t,u(x),\frac{\partial u(x)}{\partial x},\dots,\frac{\partial^{n-1}u(x)}{\partial x^{n-1}}\right).\]
+		Aleshores direm que
+		és una equació diferencial ordinària. També direm que \(t\) és la variable temporal, \(u(x)\) la variable espacial.
+	\end{definition}
+	\begin{example}
+		Considerem l'equació diferencial ordinària d'ordre \(1\) següent:
+		\[\frac{\partial u(x)}{\partial x}=f(t).\]
+		on \(I\) és un interval de \(\mathbb{R}\) i \(f\colon I\longrightarrow\mathbb{R}^{m}\).
+	\end{example}
 \end{document}
