--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -104,6 +104,12 @@
 		\labelname{Teorema de Rolle}\label{thm:Teorema de Rolle}
 		Sigui \(f\colon[a,b]\subset\mathbb{R}\longrightarrow\mathbb{R}\) una funció derivable en \((a,b)\) tal que \(f(a)=f(b)\). Aleshores existeix un cert \(c\in(a,b)\) tal que \(f'(c)=0\).
 	\end{theorem}
+	\begin{theorem}[Teorema Fonamental del Càlcul]
+		\labelname{Teorema Fonamental del Càlcul}\label{thm:Teorema Fonamental del Càlcul}
+		Siguin \([a,b]\) un interval de \(\mathbb{R}\), \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció contínua en \([a,b]\) i
+		\[F(x)=\int_{a}^{x}f(x)dx\]
+		una funció. Aleshores \(F(x)\) és derivable en \([a,b]\) i \(F'(x)=f(x)\) per a tot \(x\) de \([a,b]\).
+	\end{theorem}
 	\section{Trobar lloc per tot això}
 	\begin{definition}[Conjunt obert, tancat...]
 		\labelname{conjunt obert}\label{def:obert CDVO}
