Exemple de EDOS I

--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -168,7 +168,8 @@
 	\begin{observation}
 		Observem que en aquesta definició, si \(d=1\), \(f\) és diferenciable en \(a\) \(\Longleftrightarrow f\) és derivable en \(a\), i \(df(a)(\vec{h})=\vec{h}f'(a)\) (Si \(d=1\), multiplicar per un vector de \(\mathbb{R}\) és com multiplicar per un escalar).
 	\end{observation}
-	\begin{proposition}\label{prop:Diferenciable implica contínua}
+	\begin{proposition}
+		\label{prop:Diferenciable implica contínua}
 		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert i \(f\colon U\to\mathbb{R}^{m}\) una funció diferenciable en un punt \(a\in U\). Aleshores \(f\) és contínua en \(a\).
 		\begin{proof}
 			Sigui \(df(a)\) el diferencial de \(f\) en \(a\). Per la definició de \myref{def:diferencial} tenim que, per a qualsevol vector \(\vec{h}\) de \(\mathbb{R}^d\)
@@ -178,7 +179,8 @@
 			I això compleix la definició de \myref{def:funció contínua}, per tant \(f\) és contínua en el punt \(a\).
 		\end{proof}
 	\end{proposition}
-	\begin{proposition}\label{prop:diferenciable iff components diferenciables}
+	\begin{proposition}
+		\label{prop:diferenciable iff components diferenciables}
 		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert, \(a\in U\) un punt i \(f\) una funció tal que
 		\begin{align*}
 		f\colon U&\longrightarrow\mathbb{R}^{m}\\
